--- a/componenti.css
+++ b/componenti.css
@@ -140,6 +140,7 @@
     top: 0;
     left: 0;
     transition: background-color 1s ease-in-out;
+    animation: fade-in 0.5s ease-in forwards;
 }
 .nav-bar__logo-container{
     display: flex;
