--- a/url/BioVitalAgeClock/BioVitalAgeClock.css
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: "Quicksand", sans-serif;
 }
 
 :root{
@@ -20,10 +20,122 @@
 
 body{
     overflow-x: hidden;
-    background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
+    position: relative;
 }
 ::-webkit-scrollbar{
     width: 0px;
 }
 
 
+
+
+/* Home Section Style */
+.Home{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
+}
+.Home_Section-tittle{
+    height: 300px;
+    background-color: var(--dark2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(https://biomedia.net/wp-content/uploads/2024/09/AdobeStock_783974597-scaled.jpeg);
+}
+.Home_Section-tittle h3{
+    margin-top: 5rem;
+    color: var(--tittle2);
+    letter-spacing: 0.5px;
+    font-family: "Raleway", sans-serif;
+    font-size: 45px;
+    font-weight: 700;
+    text-align: center;
+    max-width: 40%;
+    opacity: 0;
+} 
+
+.home_section-presentation{
+   margin: auto;
+   flex-wrap: wrap;
+}
+.home_presentation-img_container img{
+    border-radius: 8px;
+    width: 100%;
+    height: auto;
+}
+.home_presentation-description h3{
+    color: var(--tittle1);
+    font-size: 35px;
+    font-weight: 400;
+    text-align: left;
+    padding-bottom: 20px;
+    opacity: 0;
+}
+.home_presentation-description h3 span,
+.home_section-etaBilogica h3 span,
+.Home-content-container-integrazioneAi span,
+.Home-content-container-integrazioneAitwo span{
+    color: var(--tittle2);
+}
+
+.home_section-etaBilogica h3,
+.Home-content-container-integrazioneAi h3,
+.Home-content-container-integrazioneAitwo h3{
+    color: var(--tittle1);
+    font-size: 35px;
+    font-weight: 400;
+    text-align: left;
+    padding-bottom: 10px;
+    opacity: 0;
+}
+.home_section-etaBilogica{
+    margin: -1rem auto 0rem auto;
+}
+.home_section-etaBilogica p span{
+    color: var(--tittl2); 
+    font-style: italic;
+}
+.marcatore{
+    color: var(--neutral-gray);
+    font-size: 12px;
+    font-weight: lighter;
+    border: 0.5px solid var(--neutral-gray);
+    width: 13rem;
+    border-radius: 4px;
+    padding: 5px;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.Home-content-container-integrazioneAi{
+    margin: 0rem auto -1rem auto;
+}
+.integrazioneAi-img-container img{
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+.integrazioneAi-description p{
+    padding-right: 12px;
+}
+.Home-content-container-integrazioneAitwo{
+    margin: -5rem auto 0rem auto;
+}
+
+.integrazioneAi-description{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 12px;
+}
+.integrazioneAi-description-two{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 12px;
+}
