--- a/url/BioVitalAgeClock/BioVitalAgeClock.css
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.css
@@ -5,16 +5,24 @@
 }
 
 :root{
-    --dark1: #0c042c;
-    --dark2: #0c214b;
-    --light1: #c3ccd4;
+    --dark1: #0c042c; 
+    --dark2: #0c214b; 
+    --light1: #c3ccd4; 
 
+    --neutral-gray: #b0b8c1;
+    --neutral-bg-color: rgba(176, 184, 193, 0.2);
+    --neutral-bg-color-contrast: rgba(124, 81, 149, 0.2); 
+    
     --contrast-color: #3a255d;
-    --contrast-color-shadow: #3b255d2c;
-    --contrast-color2: #6a2dcc;
-        
-    --tittle1: whitesmoke;
-    --tittl2: #2ac4dd;
+    --contrast-color-shadow: #3b255d2c; 
+    --contrast-color2: #6a2dcc; 
+    --positive-color: #2ac670; 
+            
+    --tittle1: whitesmoke; 
+    --tittle2: #2ac4dd; 
+
+    --circle-color-shadow: rgba(42, 196, 221,0.15);
+    --circle-color-shadow-two: rgba(42, 196, 221,0.05)
 }
 
 
@@ -38,6 +46,7 @@ body{
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
 }
 .Home_Section-tittle{
+    position: relative;
     height: 300px;
     background-color: var(--dark2);
     display: flex;
@@ -45,6 +54,15 @@ body{
     justify-content: center;
     align-items: center;
     background-image: url(https://biomedia.net/wp-content/uploads/2024/09/AdobeStock_783974597-scaled.jpeg);
+}
+.backdrop{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
@@ -56,8 +74,8 @@ body{
     text-align: center;
     max-width: 40%;
     opacity: 0;
+    z-index: 2;
 } 
-
 .home_section-presentation{
    margin: auto;
    flex-wrap: wrap;
@@ -78,13 +96,15 @@ body{
 .home_presentation-description h3 span,
 .home_section-etaBilogica h3 span,
 .Home-content-container-integrazioneAi span,
-.Home-content-container-integrazioneAitwo span{
+.Home-content-container-integrazioneAitwo span,
+.Funzionalità-title span{
     color: var(--tittle2);
 }
 
 .home_section-etaBilogica h3,
 .Home-content-container-integrazioneAi h3,
-.Home-content-container-integrazioneAitwo h3{
+.Home-content-container-integrazioneAitwo h3,
+.Funzionalità-title h3{
     color: var(--tittle1);
     font-size: 35px;
     font-weight: 400;
@@ -92,12 +112,12 @@ body{
     padding-bottom: 10px;
     opacity: 0;
 }
+
+
+
+
 .home_section-etaBilogica{
     margin: -1rem auto 0rem auto;
-}
-.home_section-etaBilogica p span{
-    color: var(--tittl2); 
-    font-style: italic;
 }
 .marcatore{
     color: var(--neutral-gray);
@@ -110,6 +130,44 @@ body{
     text-align: center;
     margin-bottom: 1rem;
 }
+.card-container-etaBiologica{
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: auto;
+}
+.card-etaBiologica{
+    background-color: rgba(176, 184, 193, 0.2);
+    border-radius: 4px;
+    width: 29rem;
+}
+.img-container-etaBiologica{
+    background-color: rgba(42, 196, 221,0.05);
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    margin-bottom: 1rem;
+}
+.img-container-circle{
+    background-color: rgba(42, 196, 221,0.15);
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
+.card-container-etaBiologica p span{
+    color: var(--tittl2); 
+    font-style: italic;
+}
+
+
+
+
+
 .Home-content-container-integrazioneAi{
     margin: 0rem auto -1rem auto;
 }
@@ -124,7 +182,6 @@ body{
 .Home-content-container-integrazioneAitwo{
     margin: -5rem auto 0rem auto;
 }
-
 .integrazioneAi-description{
     display: flex;
     flex-direction: column;
@@ -138,4 +195,257 @@ body{
     align-items: flex-start;
     justify-content: center;
     padding: 12px;
+}
+
+
+
+
+
+
+
+
+.Funzionalità-title{
+    margin: auto; 
+    margin-top: 1rem;
+}
+.Funzionalità-title h3{
+    color: var(--tittle2);
+    font-size: 35px;
+    font-weight: 700;
+}
+.ElenzoFunzionalità-Carousel-container{
+    margin: auto;
+}
+.footer-carousel{
+    height: 4rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+.pagination-container{
+    height: 4rem;
+    padding: 15px;
+}
+.container-card-carousel{
+    border-radius: 4px;
+    background-color: rgba(176, 184, 193, 0.2);
+    margin: auto;
+}
+#button-left,
+#button-right{
+    width: 4rem;
+    border: none;
+    height: 2.5rem;
+}
+#first,
+#extreme{
+    background-color: var(--neutral-bg-color);
+    height: 2rem;
+    width: 2rem;
+    text-align: center;
+    padding: 2px;
+    color: var(--tittle1);
+    border-radius: 4px;
+}
+#placeholder{
+    color: var(--tittle1);
+    width: 2rem;
+    margin-left: 1rem;
+}
+#current{
+    background-color: var(--neutral-bg-color-contrast);
+    height: 2rem;
+    width: 2rem;
+    padding: 2px;
+    color: var(--contrast-color);
+    text-align: center;
+    color: var(--tittle1);
+    border: 2px solid var(--contrast-color2);
+    border-radius: 4px;
+}
+#carousel-tittle{
+    color: var(--tittle1);
+    font-size: 35px;
+    font-weight: 400;
+    text-align: left;
+    padding-bottom: 10px;
+    opacity: 0;
+}
+#carousel-tittle span{
+    color: var(--tittle2);
+}
+
+
+
+
+
+.elencoFunzionalità{
+    background-color: var(--neutral-bg-color-contrast);
+    margin: auto;
+    border-radius: 4px;
+    height: 700px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.elencoFunzionalità h3{
+    color: var(--tittle2);
+    font-size: 35px;
+    font-weight: 700;
+}
+.elencoFunzionalità p{
+    text-align: center;
+}
+.elencoFunzionalità ul{
+    margin: auto;
+    width: 60%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 4px;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+/* Teraphy */
+#percorsi{
+    height: 2.5rem;
+    margin-top: 1rem;
+    width: 16rem;
+}
+#teraphy{
+    margin-bottom: 2rem;
+}
+
+
+/*  Perchè Noi  */
+.Home-Content-container-scleta{
+    margin: 2rem auto 0rem auto;
+}
+.Home-Content-container-scleta h3{
+    text-align: center;
+    color: var(--tittle2);
+    font-size: 35px;
+    font-weight: 700;
+    font-family: system-ui;
+
+}
+.Home-Content-container-scleta p{
+    text-align: center;
+    padding: 20px;
+}
+.Home-Content-container-vantaggi{
+    margin: -2rem auto auto auto;
+    gap: 10px;
+}
+.grid-container{
+    background-color: rgba(176, 184, 193, 0.2);
+    width: 29.5rem;
+    border-radius: 4px;
+}
+.grid-container h3{
+    color: var(--tittle1);
+    font-size: 35px;
+    font-weight: 400;
+    font-family: system-ui;
+    margin-top: 1rem;
+    text-align: left;
+    padding-bottom: 8px;
+
+}
+.img-container-grid{
+    background-color: rgba(42, 196, 221,0.05);
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
+.img-container-circle{
+    background-color: rgba(42, 196, 221,0.15);
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
+
+
+
+
+/* Demo */
+.home-content-demo{
+    background-color: rgba(124, 81, 149, 0.2); 
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+}
+.demo-descrizione{
+    margin-left: -1rem;
+}
+.demo-descrizione h5{
+    padding: 10px;
+    text-align: center;
+    color: var(--tittle1);
+}
+.demo-descrizione h3{
+    text-align: center;
+    color: var(--tittle2);
+    font-size: 40px;
+    font-weight: 700;
+    font-family: system-ui;
+}
+.demo-descrizione p{
+    text-align: center;
+    font-style: italic;
+    padding: 5px;
+    margin: auto;
+}
+.button-container-demo{
+    margin-top: 2rem;
+    gap: 10px;
+}
+.home-content-demo .button-style{
+    padding: 8px;
+    width: 18rem;
+}
+#button-funz{
+    width: 24rem;
+    padding: 8px;
+}
+.form-richiedi{
+    border-left: 5px solid var(--neutral-bg-color-contrast);
+}
+.form-richiedi h3{
+    color: var(--tittle1);
+    font-size: 35px;
+    text-align: left;
+    padding: 10px;
+    font-family: "Raleway", sans-serif;
+    letter-spacing: 1px;
+}
+.form-richiedi input{
+    display: block;
+    width: 30rem;
+    padding: 10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    outline-color: var(--contrast-color2);
+    border: none;
+}
+.form-richiedi select{
+    width: 30rem;
+    padding: 10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+}
+.form-richiedi .privacy{
+    padding: 10px;
 }
