--- a/url/Corporation/corporation.css
+++ b/url/Corporation/corporation.css
@@ -79,3 +79,145 @@ body{
     z-index: 1;
     text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
 } 
+
+
+.customers-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin: auto;
+}
+.card-customer {
+    position: relative;
+    height: 20rem;
+    width: 20rem;
+    overflow: hidden;
+}
+.card-customer .backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+.card-customer img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease-in-out;
+}
+.card-customer:hover img {
+    transform: scale(1.1);
+}
+.card-customer:hover .backdrop {
+    opacity: 1;
+}
+
+
+
+.tittle{
+    color: var(--tittle2);
+    font-size: 35px;
+    font-weight: 700;
+    margin-top: 2rem;
+    padding-top: 20px;
+    margin-bottom: -1rem;
+}
+.img-container-grid{
+    background-color: rgba(42, 196, 221,0.05);
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    margin: auto;
+}
+.img-container-circle{
+    background-color: rgba(42, 196, 221,0.15);
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
+.feedbeck-container{
+    margin: auto auto 4rem auto;
+    gap: 10px;
+
+}
+.card-feedback{
+    text-align: center;
+    background-color: var(--neutral-bg-color);
+    border-radius: 8px;
+}
+.card-feedback h3{
+    color: var(--tittle2);
+    font-style: italic;
+    padding-top: 5px;
+}
+
+
+
+.home-content-demo{
+    background-color: rgba(124, 81, 149, 0.2); 
+    margin-top: -1rem;
+    position: relative;
+    overflow: hidden;
+}
+.demo-descrizione{
+    margin-left: -55rem;
+    z-index: 2;
+}
+.demo-descrizione h5{
+    padding: 10px;
+    text-align: center;
+    color: var(--tittle1);
+}
+.demo-descrizione h3{
+    text-align: center;
+    color: var(--tittle2);
+    font-size: 40px;
+    font-weight: 700;
+    font-family: system-ui;
+}
+.demo-descrizione p{
+    text-align: center;
+    font-style: italic;
+    padding: 5px;
+    margin: auto;
+}
+.button-container-demo{
+    margin-top: 2rem;
+    gap: 10px;
+}
+.home-content-demo .button-style{
+    padding: 8px;
+    width: 14rem;
+}
+.home-content-demo .backdrop{
+    margin-left: 10%;
+    margin-top: 10%;
+    transform: rotate(40deg);
+    height: 200rem;
+    width: 200rem;
+    overflow: hidden;
+    z-index: 2;
+}
+.home-content-demo .backdrop img{
+    transform: rotate(-40deg);
+    margin-left: -40rem;
+    margin-top: 30rem;
+    z-index: 1;
+    filter: blur(2px);
+}
