--- a/url/Industries/industries.css
+++ b/url/Industries/industries.css
@@ -79,3 +79,114 @@ body{
     z-index: 1;
     text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
 } 
+
+
+
+.grid-container{
+    margin: auto;
+}
+.img-container {
+    overflow: hidden;
+    position: relative;
+}
+.img-container img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease-in-out;
+}
+.img-container:hover img {
+    transform: scale(1.1);
+}
+.img-container .backdrop {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.img-container:hover .backdrop {
+    display: flex; 
+}
+.description-card h3{
+    color: var(--tittle1);
+    font-size: 25px;
+    font-style: italic;
+}
+.description-card p{
+    color: var(--tittle2);
+    text-align: center;
+}
+.backdrop div{
+    gap: 10px;
+}
+.backdrop div a{
+    z-index: 1;
+}
+.row{
+    padding-bottom: 40px;
+}
+.tittle{
+    font-weight: bold;
+    color: var(--tittle2);
+    padding-bottom: 10px;
+}
+
+
+.home-content-demo{
+    background-color: rgba(124, 81, 149, 0.2); 
+    margin-top: -1rem;
+    position: relative;
+    overflow: hidden;
+}
+.demo-descrizione{
+    margin-left: -55rem;
+    z-index: 2;
+}
+.demo-descrizione h5{
+    padding: 10px;
+    text-align: center;
+    color: var(--tittle1);
+}
+.demo-descrizione h3{
+    text-align: center;
+    color: var(--tittle2);
+    font-size: 40px;
+    font-weight: 700;
+    font-family: system-ui;
+}
+.demo-descrizione p{
+    text-align: center;
+    font-style: italic;
+    padding: 5px;
+    margin: auto;
+}
+.button-container-demo{
+    margin-top: 2rem;
+    gap: 10px;
+}
+.home-content-demo .button-style{
+    padding: 8px;
+    width: 14rem;
+}
+.home-content-demo .backdrop{
+    margin-left: 10%;
+    margin-top: 10%;
+    transform: rotate(40deg);
+    height: 200rem;
+    width: 200rem;
+    overflow: hidden;
+    z-index: 2;
+}
+.home-content-demo .backdrop img{
+    transform: rotate(-40deg);
+    margin-left: -30rem;
+    margin-top: 15rem;
+    z-index: 1;
+    filter: blur(2px);
+}
