--- a/url/Corporation/corporation.css
+++ b/url/Corporation/corporation.css
@@ -68,7 +68,7 @@ body{
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
-    color: var(--tittle2);
+    color: var(--tittle1);
     letter-spacing: 0.5px;
     font-family: "Raleway", sans-serif;
     font-size: 45px;
@@ -77,7 +77,7 @@ body{
     max-width: 40%;
     opacity: 0;
     z-index: 1;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 } 
 
 
@@ -91,8 +91,8 @@ body{
 }
 .card-customer {
     position: relative;
-    height: 20rem;
-    width: 20rem;
+    height: 18rem;
+    width: 18rem;
     overflow: hidden;
 }
 .card-customer .backdrop {
@@ -126,11 +126,20 @@ body{
 
 .tittle{
     color: var(--tittle2);
-    font-size: 35px;
+    font-family: "Raleway", sans-serif;
+    font-size: 30px;
     font-weight: 700;
     margin-top: 2rem;
-    padding-top: 20px;
-    margin-bottom: -1rem;
+    padding-top: 40px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    max-width: 30%;
+    margin: auto;
+}
+.subtitle{
+    margin: auto;
+    padding-top: 10px;
+    text-align: left;
 }
 .img-container-grid{
     background-color: rgba(42, 196, 221,0.05);
