--- a/url/Industries/industries.css
+++ b/url/Industries/industries.css
@@ -81,9 +81,13 @@ body{
 } 
 
 
+.card-team{
+    box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.5);
+    margin: 10px;
+}
 
 .grid-container{
-    margin: auto;
+    margin: auto auto 2rem auto;
 }
 .img-container {
     overflow: hidden;
@@ -130,11 +134,16 @@ body{
 }
 .row{
     padding-bottom: 40px;
+    flex-wrap: nowrap;
 }
 .tittle{
     font-weight: bold;
     color: var(--tittle2);
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    padding-top: 40px;
+}
+.tittle:first-of-type{
+    padding-top: 0;
 }
 
 
