--- a/url/contattaci/contattaci.css
+++ b/url/contattaci/contattaci.css
@@ -59,14 +59,14 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
-    color: var(--tittle2);
+    color: var(--tittle1);
     letter-spacing: 0.5px;
     font-family: "Raleway", sans-serif;
     font-size: 45px;
@@ -74,49 +74,49 @@ body{
     font-weight: 700;
     max-width: 40%;
     opacity: 0;
-    z-index: 1;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+    z-index: 3;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
 } 
-
-
 .home-content-demo{
     background-color: rgba(124, 81, 149, 0.2); 
     margin-top: 0rem;
 }
-.demo-descrizione{
-    margin-left: -1rem;
-}
 .demo-descrizione h5{
-    padding: 10px;
+    padding-left: 20px;
     text-align: left;
-    color: var(--tittle1);
-    font-size: 30px;
+    color: var(--tittle2);
+    font-size: 20px;
 }
 .demo-descrizione h3{
-    text-align: center;
-    color: var(--tittle2);
+    padding-left: 17px;
+    text-align: left;
+    color: var(--tittle1);
     font-size: 40px;
     font-weight: 700;
-    font-family: system-ui;
-}
-.demo-descrizione h4{
-    text-align: center;
-    color: var(--tittle1);
-    font-size: 25px;
-    font-weight: 700;
-    font-family: system-ui;
-    margin-bottom: -1rem;
-    margin-top: 1rem;
+    font-family: "Raleway", sans-serif;
 }
 .demo-descrizione p{
-    text-align: center;
-    font-style: italic;
-    padding: 5px;
-    margin: auto;
+    text-align: left;
+    padding-left: 20px;
+    padding-top: 10px;
 }
-.telefono-container{
-    gap: 10px;
+.card-container-info{
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px;
 }
+.card-description h3{
+    font-size: 25px;
+    color: var(--tittle2);
+    padding-top: 10px;
+}
+.card-container-info .img-container{
+    background-color: var(--neutral-bg-color);
+    border-radius: 8px;
+}
+
+
+
 .button-container-demo{
     margin-top: 2rem;
     gap: 10px;
@@ -129,16 +129,31 @@ body{
     width: 24rem;
     padding: 8px;
 }
+
+
+
+
 .form-richiedi{
     border-left: 5px solid var(--neutral-bg-color-contrast);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.form-richiedi h5{
+    text-align: left;
+    color: var(--tittle2);
+    font-size: 20px;
+    margin-top: -1.2rem;
 }
 .form-richiedi h3{
     color: var(--tittle1);
-    font-size: 35px;
+    font-size: 40px;
     text-align: left;
-    padding: 10px;
-    font-family: system-ui;
+    font-family: "Raleway", sans-serif;
     letter-spacing: 1px;
+    font-weight: 700;
+
 }
 .form-richiedi input{
     display: block;
@@ -157,8 +172,17 @@ body{
     margin-bottom: 1rem;
     border-radius: 8px;
 }
+.container-input{
+    gap: 10px;
+    margin-top: -0.5rem;
+}
+.form-richiedi textarea{
+    margin-top: 0.5rem;
+    border-radius: 8px;
+    padding: 12px;
+}
 .form-richiedi .privacy{
-    padding: 10px;
+    padding-top: 15px;
 }
 
 
@@ -181,7 +205,7 @@ body{
         justify-content: center;
         align-items: center;
         height: 15rem;
-        z-index: 1;
+        z-index: 3;
 }
 .description-demo button{
     height: 2.5rem;
@@ -192,11 +216,19 @@ body{
     font-weight: bold;
     padding: 10px;
     font-family: system-ui;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
 .description-demo p{
     text-align: center;
     padding: 10px;
     text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(1px);
+}
+
+
+#map{
+    height: 500px;
+    margin-top: -1.5rem;
+    margin-bottom: 1.5rem;
+    z-index: 1;
 }
