--- a/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
+++ b/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
@@ -60,13 +60,13 @@ body{
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
-    color: var(--tittle2);
+    color: var(--tittle1);
     letter-spacing: 0.5px;
     font-family: "Raleway", sans-serif;
     font-size: 45px;
@@ -76,20 +76,8 @@ body{
     opacity: 0;
     z-index: 1;
 } 
-
 #teraphy{
     margin: auto;
-}
-.marcatore{
-    color: var(--neutral-gray);
-    font-size: 12px;
-    font-weight: lighter;
-    border: 0.5px solid var(--neutral-gray);
-    width: 13rem;
-    border-radius: 4px;
-    padding: 5px;
-    text-align: center;
-    margin-bottom: 1rem;
 }
 #teraphy h3{
     color: var(--tittle1);
@@ -184,53 +172,61 @@ span{
 
 
 .applicazioni-container{
-    background-image: url(https://eu-images.contentstack.com/v3/assets/blt0090d6170c12be15/bltb00bca630c207de6/66506ccdbaad82112674d9d9/blog-jmc-articolo-medicina-digitale.jpg?width=1920&height=906&format=jpg&quality=50);
     height: 40rem;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
+    margin-bottom: -2rem;
+    overflow: hidden;
 }
-.content-container{
-    z-index: 1;
-    gap: 15px;
-}
-.cards{
-    background-color: rgba(176, 184, 193, 0.4);
-    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.4);
-    z-index: 1;
-    border-radius: 8px;
+.applicazioni-container .backdrop{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-}
-.img-container-grid{
-    background-color: rgba(42, 196, 221,0.05);
-    width: 4rem;
-    height: 4rem;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-    margin-left: -0.5rem;
 }
-.img-container-circle{
-    background-color: rgba(42, 196, 221,0.15);
-    width: 3rem;
-    height: 3rem;
+.image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+}
+.content-container{
+    z-index: 4;
+    gap: 15px;
+    margin: 0rem auto;
+}
+.cards{
+    background-color: var(--neutral-bg-color);
+    border-radius: 8px;
+    border-left: 5px solid var(--contrast-color2);
+    box-shadow: 1px 5px 5px 5px rgba(0, 0, 0, 0.1);
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start
 }
 .cards h3{
     text-align: left;
     color: var(--tittle1);
 }
 .tittle-terapy{
-    position: absolute;
-    top: 8rem;
-    color: var(--tittle2);
+    color: var(--tittle1);
     font-size: 35px;
-    z-index: 1;
+    z-index: 3;
     font-weight: bold;
+    padding-left: 50px;
+    margin: 0rem auto;
+    text-align: left;
+}
+.button-style{
+    margin-top: 1rem;
+}
+.applicazioni-container .marcatore{
+    margin: 0rem auto;
+    padding-left: 50px;
+    padding-bottom: 5px;
+}
+.cards:hover {
+    background-color: var(--contrast-color-shadow);
 }
