--- a/style.css
+++ b/style.css
@@ -186,22 +186,6 @@ video{
 
 
 
-/* .backdrop{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    overflow: hidden;
-}
-.backdrop img{
-    width: 100%;
-    height: auto;
-}
-
- */
-
 
  
 .Home-content-container-piattaforma{
@@ -217,10 +201,7 @@ video{
     align-items: flex-start;
     margin-left: 5.5rem;
 }
-.marcatore{
-    color: var(--tittle2);
-    font-size: 20px;
-}
+
 .piattaforma-description{
     display: flex;
     flex-direction: column;
@@ -248,14 +229,14 @@ video{
     opacity: 0.9;
 }
 .piattaforma-description:first-of-type .button-style{
-    height: 2.5rem;
+    height: 3rem;
     margin-top: 1rem;
-    width: 14rem;
+    width: 16rem;
 }
 .funzionalità .button-style{
-    height: 2.5rem;
+    height: 3rem;
     margin-top: 1rem;
-    width: 18rem;
+    width: 16rem;
 }
 
 
@@ -358,7 +339,7 @@ video{
 }
 .home-content-demo .button-style{
     padding: 8px;
-    width: 18rem;
+    width: 16rem;
 }
 #button-funz{
     width: 24rem;
@@ -532,8 +513,9 @@ video{
     padding-top: 0px;
 }
 #notizie{
-    width: 20rem;
+    width: 16rem;
     padding: 8px;
+    height: 3rem;
 }
 
 
@@ -557,8 +539,9 @@ video{
     align-items: center;
 }
 #domanda{
-    width: 18rem;
+    width: 16rem;
     padding: 8px;
+    height: 3rem;
 }
 .accordion{
     display: flex;
@@ -668,4 +651,12 @@ video{
 }
 .scale-animate {
     animation: scale 2s forwards; 
+}
+
+.button-style{
+    width: 16rem;
+}
+
+.container-blog-presentation .img-container:hover .backdrop {
+    background: none;
 }
