--- a/url/Innovation/innovation.css
+++ b/url/Innovation/innovation.css
@@ -59,13 +59,13 @@ body{
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
-    color: var(--tittle2);
+    color: var(--tittle1);
     letter-spacing: 0.5px;
     font-family: "Raleway", sans-serif;
     font-size: 45px;
@@ -74,7 +74,6 @@ body{
     max-width: 40%;
     opacity: 0;
     z-index: 1;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
 } 
 #subtitle{
     text-align: left;
@@ -83,7 +82,6 @@ body{
     z-index: 1;
     padding: 10px;
     margin-left: 2rem;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
 }
 .img-container img{
     width: 100%;
@@ -113,19 +111,30 @@ body{
     color: aliceblue;
     text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
-.container-blog-presentation{
-    margin-top: 2rem;
+.container-blog-presentation .img-container{
+    position: relative;
+}
+.container-blog-presentation .img-container .backdrop{
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.container-blog-presentation .img-container:hover .backdrop {
+    background: none;
 }
 
 
+
+
+/* New List */
 .tittle-news{
-    padding: 60px 40px 40px 40px;
-    text-align: center;
-    margin: auto auto -2rem auto;
+    margin: auto;
+    padding: 80px 50px 20px 40px;   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .tittle-news h3,
 .tittle-news-two h3{
-    color: var(--tittle2);
+    color: var(--tittle1);
     letter-spacing: 0.5px;
     font-family: "Raleway", sans-serif;
     font-size: 35px;
@@ -138,47 +147,70 @@ body{
     margin: auto;
     padding: 60px 40px 0px 45px;
 }
-
+.tittle-news select{
+    width: 14rem;
+    height: 2.8rem;
+    border-radius: 8px; 
+    padding: 8px;
+    background-color: var(--contrast-color2);
+    color: var(--tittle1);
+    outline-color: var(--contrast-color2);
+    border: none;
+}
+.tittle-news select option{
+    background-color: var(--dark2);
+}
 
 .ultime-notizie-container{
     gap: 10px;  
     padding: 0px 50px 10px 50px;
     margin: auto;
 }
-#first{
-    background-image: url(https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg) ;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-#second{
-    background-image: url(https://knowhow.distrelec.com/wp-content/uploads/2022/09/Top-10-Healthcare-Tech-1920x800.jpg) ;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 .card-notizie{
-    height: 400px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     justify-content: center;
-    position: relative;
+    align-items: center;
+    background-color: var(--neutral-bg-color);
+    overflow: hidden;
+    height: 35rem;
+}
+.card-descrizione{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: -1rem; 
+}
+.autore-description{
+    gap: 10px;
 }
 .card-notizie h3{
     color: var(--tittle1);
-    text-align: left;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
-    backdrop-filter: blur(1px);
-    z-index: 1;
 }
-.card-notizie p{
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(1px);
-    z-index: 1;
+.pagination{
+    margin: auto;
+    gap: 10px;
 }
-.card-notizie button{
-    backdrop-filter: blur(1px);
-    z-index: 1;
+.pagination button{
+    background-color: var(--contrast-color2);
+    color: var(--tittle1);
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    width: 40px
 }
+.pagination button:hover{
+    background-color: var(--dark1);
+}
+#active{
+    background-color: var(--dark1);
+}
+
+
+
+
+
 
 
 .Aggiornamenti{
@@ -212,9 +244,7 @@ body{
     align-items: center;
     border-radius: 50px;
 }
-.container-blog-presentation:last-of-type{
-    padding-bottom: 20px;
-}
+
 
 .home-content-demo{
     background-color: rgba(124, 81, 149, 0.2); 
@@ -248,4 +278,20 @@ body{
 .home-content-demo .button-style{
     padding: 8px;
     width: 16rem;
+}
+
+
+.scale-animate {
+    animation: scale 1s ease-in-out forwards;
+}
+
+@keyframes scale {
+    from {
+        transform: scale(1.1);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1.0);
+        opacity: 1; 
+    }
 }
