--- a/url/Industries/industries.css
+++ b/url/Industries/industries.css
@@ -56,19 +56,20 @@ body{
     background-position: 0% 40%;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 .backdrop{
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
 }
 .Home_Section-tittle h3{
     margin-top: 5rem;
-    color: var(--tittle2);
+    color: var(--tittle1);
     letter-spacing: 0.5px;
     font-family: "Raleway", sans-serif;
     font-size: 45px;
@@ -76,16 +77,152 @@ body{
     font-weight: 700;
     max-width: 40%;
     opacity: 0;
-    z-index: 1;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+    z-index: 3;
 } 
 
 
+
+
+.contenitore-video{
+    position: relative;
+    height: 600px;
+    overflow: hidden;
+}
+video{
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
+}
+.backdrop{
+    background-color: rgba(0,0,0,0.1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+.contenitore-description{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: -4rem;
+}
+.contenitore-description h3,
+.contenitore-presentazione-description h3{
+    color: var(--tittle1);
+    letter-spacing: 0.5px;
+    font-family: "Raleway", sans-serif;
+    font-size: 35px;
+    font-weight: 500;
+}
+.contenitore-description p{
+    color: var(--light1);
+    letter-spacing: 1px;
+    line-height: 1.5rem;
+    max-width: 46%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.contenitore-presentazione{
+    margin: 0rem auto;
+}
+#correzione{
+    margin-top: -3rem;
+}
+.contenitore-presentazione-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+span{
+    color: var(--tittle2);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.home-content-demo{
+    background-color: rgba(124, 81, 149, 0.2); 
+    margin-top: -1rem;
+    position: relative;
+    overflow: hidden;
+}
+.demo-descrizione{
+    margin-left: -55rem;
+    z-index: 2;
+}
+.demo-descrizione h5{
+    padding: 10px;
+    text-align: center;
+    color: var(--tittle1);
+}
+.demo-descrizione h3{
+    text-align: center;
+    color: var(--tittle2);
+    font-size: 40px;
+    font-weight: 700;
+    font-family: system-ui;
+}
+.demo-descrizione p{
+    text-align: center;
+    font-style: italic;
+    padding: 5px;
+    margin: auto;
+}
+.button-container-demo{
+    margin-top: 2rem;
+    gap: 10px;
+}
+.home-content-demo .button-style{
+    padding: 8px;
+    width: 14rem;
+}
+.home-content-demo .backdrop{
+    margin-left: 10%;
+    margin-top: 10%;
+    transform: rotate(40deg);
+    height: 200rem;
+    width: 200rem;
+    overflow: hidden;
+    z-index: 2;
+}
+.home-content-demo .backdrop img{
+    transform: rotate(-40deg);
+    margin-left: -30rem;
+    margin-top: 15rem;
+    z-index: 1;
+    filter: blur(2px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
 .card-team{
     box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.5);
     margin: 10px;
 }
-
 .grid-container{
     margin: auto auto 2rem auto;
 }
@@ -146,56 +283,4 @@ body{
     padding-top: 0;
 }
 
-
-.home-content-demo{
-    background-color: rgba(124, 81, 149, 0.2); 
-    margin-top: -1rem;
-    position: relative;
-    overflow: hidden;
-}
-.demo-descrizione{
-    margin-left: -55rem;
-    z-index: 2;
-}
-.demo-descrizione h5{
-    padding: 10px;
-    text-align: center;
-    color: var(--tittle1);
-}
-.demo-descrizione h3{
-    text-align: center;
-    color: var(--tittle2);
-    font-size: 40px;
-    font-weight: 700;
-    font-family: system-ui;
-}
-.demo-descrizione p{
-    text-align: center;
-    font-style: italic;
-    padding: 5px;
-    margin: auto;
-}
-.button-container-demo{
-    margin-top: 2rem;
-    gap: 10px;
-}
-.home-content-demo .button-style{
-    padding: 8px;
-    width: 14rem;
-}
-.home-content-demo .backdrop{
-    margin-left: 10%;
-    margin-top: 10%;
-    transform: rotate(40deg);
-    height: 200rem;
-    width: 200rem;
-    overflow: hidden;
-    z-index: 2;
-}
-.home-content-demo .backdrop img{
-    transform: rotate(-40deg);
-    margin-left: -30rem;
-    margin-top: 15rem;
-    z-index: 1;
-    filter: blur(2px);
-}
+ */
